--- a/client/src/index.css
+++ b/client/src/index.css
@@ -221,3 +221,22 @@ button[disabled] {
 }
 
 /*END NEW CONTACT*/
+
+/* ERROR MESSAGE */
+
+.error-message {
+  text-align: center;
+  margin-top: 10px;
+  font-size: 20px;
+  color: red;
+}
+
+.error-page {
+  height: 400px;
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
